--- a/xit/index.html
+++ b/xit/index.html
@@ -16,21 +16,21 @@
         <div class="top">
             <div id="timer"></div>
         </div>
-        <div class="container">
+        <div class="container outer">
             <div class="row">
                 <div class="col-sm-6 col-md-6">
                     <div id="waters"></div>
                 </div>
                 <div class="col-sm-6 col-md-6">
-                    <div id="malts"><h3>Malt</h3></div>
+                    <div id="malts"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-6">
-                    <div id="hops"><h3>Hops</h3></div>
+                    <div id="hops"></div>
                 </div>
                 <div class="col-sm-6 col-md-6">
-                    <div id="worts"><h3>Wort</h3></div>
+                    <div id="worts"></div>
                 </div>
             </div>
             <div class="row">
@@ -38,12 +38,12 @@
                     <div id="gravities"></div>
                 </div>
                 <div class="col-sm-6 col-md-6">
-                    <div id="yields"></div>
+                    <div id="yields" style="display: none;"></div>
                 </div>
             </div>
         </div>
-        <h2>Beers</h2>
-        <ul id='beers'></ul>
+        <h2 style="display: none;">Beers</h2>
+        <ul id='beers' style="display: none;"></ul>
 
         <p>Please follow us on <a>Twitter</a> and/or friend us on <a>Facebook</a></p>
         <p>Powered By: Xit-Strategies</p>
