--- a/xit/beer/beer.html
+++ b/xit/beer/beer.html
@@ -11,7 +11,7 @@
 		<form id='create' action=''></form>
 		<div id='beers'></div>
 		<script type='text/javascript' 
-                src='../../../steal/steal.js'>
+                src='../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
 		steal(
