--- a/xit/index.html
+++ b/xit/index.html
@@ -18,26 +18,27 @@
         </div>
         <div class="container outer">
             <div class="row">
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-6">
                     <div id="waters"></div>
                 </div>
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-6">
                     <div id="malts"></div>
                 </div>
+                <div class="result"></div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-6">
                     <div id="hops"></div>
                 </div>
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-6">
                     <div id="worts"></div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-6">
                     <div id="gravities"></div>
                 </div>
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-6">
                     <div id="yields" style="display: none;"></div>
                 </div>
             </div>
