Started building the base of the warehouse app and moved the beer app.

--- a/xit/beerApp/index.html
+++ b/xit/beerApp/index.html
@@ -48,6 +48,6 @@
 
         <p>Please follow us on <a>Twitter</a> and/or friend us on <a>Facebook</a></p>
         <p>Powered By: Xit-Strategies</p>
-		<script type='text/javascript' src='../steal/steal.js?xit'></script>
+		<script type='text/javascript' src='../../steal/steal.js?xit'></script>
 	</body>
 </html>
