moving more files around

--- a/learnEmber/index.html
+++ b/learnEmber/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ember Starter Kit</title>
-  <link href=".././learnEmber/css/bootstrap.css" media="screen" rel="stylesheet" />
+  <link href="css/bootstrap.css" media="screen" rel="stylesheet" />
 </head>
 <body>
 
